--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -66,7 +66,7 @@ TODO: em grid structure explained in plain English (when new grid structure deci
 
 /*
 **************************************************************************
-# LEVEL 3: Primary Containers (master, editor, menu)
+# LEVEL 3: Primary Containers (master, editor, menu, modal)
 */
 
 // 1. Layout for Snap.js. See https://github.com/jakiestfu/Snap.js/#layout
@@ -135,14 +135,40 @@ Menu
   height: @height-menu-footer;
 }
 
+// 1. Center vertically. See http://css-tricks.com/centering-css-complete-guide/#vertical-block-known
+// 2. Set default max-height
+// 3. Set white background to hide stuff below.
+.container-modal {
+  position: absolute;                   // [1]
+  top: 50%;                             // [1]
+  -webkit-transform: translateY(-50%);  // [1]
+  -moz-transform: translateY(-50%);     // [1]
+  -o-transform: translateY(-50%);       // [1]
+  -ms-transform: translateY(-50%);      // [1]
+  transform: translateY(-50%);          // [1]
+  width: 100%;
+  height: inherit;
+  max-height: 80%;  // [2]
+  .center-horizontally-absolute();
+  background-color: white;  // [3]
+}
+
+@large-screen-width-modal: 350px;
+@large-screen-height-modal: 400px;
+
 /*
 Vertically center .container-master and .container-editor in large screens
 */
+// 1. Set maximum dimensions for modal.
 @media (min-height: @height-landscape-max) {
   .container-master,
   .container-editor {
     margin-top: -@height-landscape-max / 2;
     top: 50%;
+  }
+  .container-modal {
+    max-width: @large-screen-width-modal;   // [1]
+    max-height: @large-screen-height-modal; // [1]
   }
 }
 
@@ -195,6 +221,11 @@ Vertically center .container-master and .container-editor in large screens
   padding-bottom: 0;  // [1]
 }
 
+// 3. Modal's bottom padding to make room for footer.
+.container-modal .container-fluid--inner {
+  padding-bottom: @height-footer-short;
+}
+
 // 1. Inherit width from parent. Elements inside swiper would otherwise be as wide as `.swiper-wrapper`.
 .swiper-slide .container-content {
   width: inherit; /* [1] */
@@ -230,7 +261,8 @@ Vertically center .container-master and .container-editor in large screens
 }
 
 // 1. Footer with buttons is shorter.
-.container-master .container-content--after.group-btn {
+.container-master .container-content--after.group-btn,
+.container-modal .container-content--after.group-btn {
   height: @height-footer-short; // [1]
 }
 
@@ -366,7 +398,8 @@ Vertically center .container-master and .container-editor in large screens
 //  inbox task note list
 // 1. Fluid container height
 .container-titlebar,
-.container-toolbar {
+.container-toolbar,
+.modal-toolbar {
   display: table-row; /* [1] */
 }
 
@@ -525,6 +558,9 @@ Use `.group-instruction` to create an instruction block in the middle of a secti
     line-height: @grid-vertical-medium;
   }
 
+  .textgroup-ingress.first {
+    padding-bottom: @grid-vertical-half;
+  }
   .textgroup-ingress.last {
     padding-top: @grid-vertical-half;
   }
@@ -904,6 +940,15 @@ NOTE: Implementation depends on the removing of --left|--right DOM nodes if they
   padding-top: 2vh;
 }
 
+// 1. Override default top and bottom padding.
+.group-heading.shrinked {
+  padding-top: 0;     // [1]
+  padding-bottom: 0;  // [1]
+  &.long {
+    font-size: @size-font-not-so-large;
+  }
+}
+
 // FIXME: refactor or move (overrides.less)
 // iPhone 4s, less top margin for instruction headings
 .height-small .group-heading.instruction {
@@ -1052,6 +1097,16 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
 .container-toolbar .group-symmetrical {
   height: @height-toolbar;
   line-height: @height-toolbar;
+}
+
+// .modal-toolbar has a special .group-symmetrical
+@height-modal-toolbar: 30px;
+.modal-toolbar.group-symmetrical {
+  height: @height-modal-toolbar;
+  line-height: @height-modal-toolbar;
+  .group-symmetrical--right {
+    padding-right: 14px;
+  }
 }
 
 .group-centered {
