Make large star align vertically inside parent element.

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -189,6 +189,11 @@ Icon classes
   color: @color-text-inverse;
 }
 
+// 1. Make star align vertically inside parent.
+.icon-star.large {
+  display: initial; // [1]
+}
+
 .icon-star.small {
   line-height: @grid-vertical-half;
 }
