Added created and modified fields into note editor's advanced slide and label for convert actions.

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -15,7 +15,8 @@ TODO: Icons are not working yet with Phytoplankton
 @size-icon-toggle-completed: 20px;
 @size-icon-arrow-small: 11px;
 @size-icon-arrow-large: 16px;
-@size-icon-arrow-move: 20px;
+@size-icon-arrow-move: 15px;
+@size-icon-arrow-move-large: 20px;
 @size-icon-star-large: 25px;
 @size-icon-star: 16px;
 @size-icon-star-small: 8px;
