--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -274,6 +274,13 @@ Convert texts.
   }
 }
 
+.text-convert.large {
+  min-height: @size-icon-arrow-move-large;
+  &:before {
+    font-size: @size-icon-arrow-move-large;
+  }
+}
+
 /*
 Search results (omnibar, deleted)
 */
