Decreased line-height of .text-heading-primary, e.g. headings in toolbar.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -165,7 +165,8 @@ Use `.text-details` to separate details from body text.
 
 // TODO: Use .text-heading-primary and .emphasis which defines .set-font-bold().
 .text-heading-primary {
-  line-height: @grid-vertical-half;
+  line-height: 18px;
+  // line-height: @grid-vertical-half;
   font-size: @size-font-topheading;
   .set-font-bold();
 }
