In note editor, toggle title visibility in titlebar when content scroll passes bottom of a title input.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -667,3 +667,9 @@ TODO: Example needed
 .web .pika-button:hover {
   .set-font-bold; // [1]
 }
+
+// FIXME: move (overrides.less)
+// 1. Override ng-hide behaviour when sticky.
+.scroll-then-toggle.ng-hide.show-sticky {
+  display: initial !important;  // [1]
+}
