--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -673,3 +673,11 @@ TODO: Example needed
 .scroll-then-toggle.ng-hide.show-sticky {
   display: initial !important;  // [1]
 }
+
+/*
+*************************************************************
+# Collapsible (more/less) widget
+*/
+.collapsible {
+  text-align: center;
+}
