In note editor, beginnings of adding call to action into property edit modes.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -155,6 +155,7 @@ Use `.text-details` to separate details from body text.
 }
 
 .text-edit {
+  display: inline-block;
   font-size: @size-font-small;
   .dont-break-words();
 }
