Use classes instead of ng-class for onboarding hiding for better performance

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -681,3 +681,18 @@ TODO: Example needed
 .collapsible {
   text-align: center;
 }
+
+/*
+*************************************************************
+# Onboarding
+*/
+
+.onboarding-in-progress {
+  .onboarding-link-disable{
+    pointer-events: none !important;
+  }
+
+  .onboarding-hide {
+    display:none;
+  }
+}
