--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1270,17 +1270,16 @@ Not compatible with `.row` so we need to apply padding-left and -right inside.
 
 // 1. Set full height.
 // 2. Set full width.
-// 3. Clear horizontal and bottom padding from container.
+// 3. Clear padding from container.
 // 4. Set new line with the value of line-height into padding-bottom.
 // 5. Override values from msd-elastic
 .inner-wrapper-full {
   height: 100%; // [1]
   .row-vertically-centered.with-textarea {
     height: 100%; // [1]
-    padding-bottom: 0;  // [3]
-    padding-left: 0;    // [3]
-    padding-right: 0;   // [3]
+    padding: 0;  // [3]
     textarea {
+      padding-top: @padding-vertically-centered;    // [1]
       padding-left: @grid-horizontal;     // [2]
       padding-right: @grid-horizontal;    // [2]
       padding-bottom: @grid-vertical-half;  // [4]
