Done text bolded in editors

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -158,6 +158,7 @@ Use `.text-details` to separate details from body text.
   display: inline-block;
   font-size: @size-font-small;
   .dont-break-words();
+  .set-font-bold();
 }
 
 .text-teaser {
