Hide back/save button from item editor during in sorting mode.

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -682,6 +682,18 @@ TODO: Example needed
   text-align: center;
 }
 
+
+/*
+*************************************************************
+# Sorting
+*/
+
+.sorting-in-progress {
+  .sorting-hide {
+    display: none;
+  }
+}
+
 /*
 *************************************************************
 # Onboarding
