Convert to list in inbox sorting. Other fixes:  * when list is deleted, change feature to lists when editor opened from deleted list  * updated UI in list editor  * refactoring

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -332,6 +332,10 @@ Convert texts.
   }
 }
 
+.text-convert.small {
+  font-size: 13px;
+}
+
 .text-convert.large {
   min-height: @size-icon-arrow-move-large;
   &:before {
