Added stop sorting icon

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -44,6 +44,7 @@ TODO: Icons are not working yet with Phytoplankton
 @icon-selection-checked: "\e60f";
 @icon-selection-empty: "\e610";
 @icon-sort: "\e611";
+@icon-sort-stop: "\e614";
 
 @font-face {
 	font-family: 'icomoon';
